DFB-36 show optional for non required fields

--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -235,3 +235,5 @@
 .addConditional {padding-top:1em}
 .addCalculation {padding-top:1em}
 legend {padding: 2px 0}
+#SFDSWFB-target .form-group > label:after {padding-left:1em;font-size:.8em;content:"(optional)"}
+#SFDSWFB-target .form-group[data-required=true] > label:after {content:""}
