DFB-200 remove the label above the submit button

--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -237,3 +237,4 @@
 legend {padding: 2px 0}
 #SFDSWFB-target .form-group > label:after {padding-left:1em;font-size:.8em;content:"(optional)"}
 #SFDSWFB-target .form-group[data-required=true] > label:after {content:""}
+#SFDSWFB-target .popover .form-group > label:after {content:""}
