--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -237,4 +237,5 @@
 legend {padding: 2px 0}
 #SFDSWFB-target .form-group > label:after {padding-left:1em;font-size:.8em;content:"(optional)"}
 #SFDSWFB-target .form-group[data-required=true] > label:after {content:""}
+#SFDSWFB-target .form-group[data-formtype=m11] > label:after {content:""}
 #SFDSWFB-target .popover .form-group > label:after {content:""}
