--- a/public/assets/css/form-base.css
+++ b/public/assets/css/form-base.css
@@ -8,6 +8,13 @@ label,
 legend {
 	display: block;
 	margin: 1.5rem 0 0.25rem;
+  padding: 0;
+}
+
+label:empty,
+legend:empty,
+p:empty {
+  margin: 0;
 }
 
 .field-legend:after,
@@ -32,19 +39,15 @@ input[type="radio"] {
 	clear: left;
 }
 
-input[type="text"],
-input[type="number"],
-input[type="tel"],
-input[type="password"],
-input[type="time"],
-input[type="search"],
-input[type="date"],
-input[type="email"],
-input[type="url"],
+input,
 textarea {
 	border: 1px solid #777;
 	width: 100%;
 	padding: 0.5rem;
+}
+
+textarea {
+  resize: vertical;
 }
 
 .help-block {
@@ -147,6 +150,10 @@ textarea {
 }
 
 /* Hacks */
+  
+ input[formtype="m11"] {
+    display: none;
+ }
 
 /* Add a cursor to .form-section-nav elements */
 .form-section-nav li {
@@ -172,8 +179,9 @@ textarea {
 
 #SFDSWFB-legend {
 	position: absolute !important;
-    height: 1px; width: 1px;
-    overflow: hidden;
-    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-    clip: rect(1px, 1px, 1px, 1px);
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+	clip: rect(1px, 1px, 1px, 1px);
 }
