Standardize loading spinner styles on welcome page

--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -30,6 +30,14 @@
 		  .clear {
 			clear:both;
 		  }
+	  .fa-circle-notch {
+      	color: #ddd;
+      }
+
+      .forms .fa-circle-notch {
+      	font-size: 2em;
+      }
+      
       #SFDSWFB-components{
         min-height: 600px;
         margin-top: 5px;
