Explain form-wide action menu

--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -293,7 +293,7 @@ hr.and::before {
 }
 
 
-/* Form-wide action menu */
+/* Form-wide action menu (clone, delete, etc.) */
 
 .clickMenu {
   display: block;
