DFB-326: Remove / streamline animations (#87)
* Remove most animations, speed up CSV animation

* Standardize loading spinner styles on welcome page

* Toggle accordion sections on click

* [unrelated] Center the “Welcome back!” text

* Show pointer cursor when clicking on accordions

--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -52,6 +52,14 @@
 		  .clear {
 			clear:both;
 		  }
+	  .fa-circle-notch {
+      	color: #ddd;
+      }
+
+      .forms .fa-circle-notch {
+      	font-size: 2em;
+      }
+      
       #SFDSWFB-components{
         min-height: 600px;
         margin-top: 5px;
@@ -241,6 +249,10 @@
 		position:absolute;
 		top:15px;
 		right:15px;
+	}
+
+	.accordion-section {
+		cursor: pointer;
 	}
 
 #SFDSWFB-target .form-group {position:relative}
