--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -30,6 +30,14 @@
 		  .clear {
 			clear:both;
 		  }
+	  .fa-circle-notch {
+      	color: #ddd;
+      }
+
+      .forms .fa-circle-notch {
+      	font-size: 2em;
+      }
+      
       #SFDSWFB-components{
         min-height: 600px;
         margin-top: 5px;
@@ -219,6 +227,10 @@
 		position:absolute;
 		top:15px;
 		right:15px;
+	}
+
+	.accordion-section {
+		cursor: pointer;
 	}
 
 #SFDSWFB-target .form-group {position:relative}
