DFB-325 Decrease login page size (#85)
* Refactor login page markup to use Bootstrap

* Optimize background image

* Remove toolkit.css/js and references to it

* Fix mobile classes

* Move styles to editor.css

Add a .container-login class to scope styles

* Jim 14.1 (#82)

* DFB-201 remove search and password field types

* DFB-300 File uploads do not have a default name attribute

* DFB-326: Remove / streamline animations (#87)

* Remove most animations, speed up CSV animation

* Standardize loading spinner styles on welcome page

* Toggle accordion sections on click

* [unrelated] Center the “Welcome back!” text

* Show pointer cursor when clicking on accordions

* Add class to body tag to fix layout issues

* DFB-305 expose number type validation on load (#83)

* DFB 243, 245, 320 calculations, price and form preview (#84)

* DFB-320 make a form preview function

* DFB-243

* DFB-245 calculations don't work with default values

* code review semantic change

--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -1,15 +1,37 @@
-		  body {
-			//padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-			padding-bottom: 10px;
-		  }
-			.hero-header {
-				background: url(/assets/images/bg4.jpg) no-repeat center center / auto 100%;
-			}
-			@media only screen and (min-width: 64.063em) {
-				.hero-header {
-					background: url(/assets/images/bg4.jpg) no-repeat center center / 100% auto;
-				}
-			}
+	html,
+	body {
+		height: 100%;
+	}
+
+	body {
+		padding-bottom: 10px;
+	}
+
+	.login {
+		background:#222 url(/assets/images/bg4.jpg) no-repeat center center;
+		background-size: 100% 100%;
+		min-height: 100%;
+	}
+
+	.login .row {
+		margin-top: 6em;
+	}
+
+	.login header,
+	.login h1 {
+		font-size: 2em;
+		color: #fff;
+		text-shadow: 0 0 18px #000;
+	}
+
+	.login h2 {
+		margin-top: 0;
+	}
+
+	.login .panel {
+		padding: 2em;
+	}
+
 			h1 {
 				color:#333;
 			}
