--- a/public/assets/sass/editor.scss
+++ b/public/assets/sass/editor.scss
@@ -438,7 +438,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #SFDSWFB-list .item {
-	padding:.25em;width:calc(100% - 7em)
+	padding:0 .25em;width:calc(100% - 7em)
 }
 
 #SFDSWFB-list .item:hover, #SFDSWFB-list .item.selected {
@@ -450,11 +450,11 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #SFDSWFB-list .item.spacer {
-	height:1em;width:100%
+	height:1.5em;
+	width:100%
 }
 
 #SFDSWFB-list .item.spacer:hover, #SFDSWFB-list .item.spacer.selected {
-	margin-bottom:1em;
 	border-bottom:2px solid blue;
 	background-color:transparent
 }
@@ -490,6 +490,14 @@ a:link, a:visited, a:hover, a:active {
 	border:1px solid #ddd;
 	position:absolute;
 	top:.5em
+}
+
+.clone-button {
+	right:2.5em
+}
+
+.delete-button {
+	right:0
 }
 
 .embed-toggle {
