feedback [ci skip]

--- a/public/assets/sass/editor.scss
+++ b/public/assets/sass/editor.scss
@@ -456,6 +456,8 @@ a:link, a:visited, a:hover, a:active {
 #SFDSWFB-list .item.spacer {
   height:1.5em;
   width:100%
+  text-align: center;
+  color: #ddd;
 }
 
 #SFDSWFB-list .item.spacer:hover, #SFDSWFB-list .item.spacer.selected {
