--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -453,7 +453,9 @@ a:link, a:visited, a:hover, a:active {
 
 #SFDSWFB-list .item.spacer {
   height:1.5em;
-  width:100%
+  width:100%;
+  text-align: center;
+  color: #ddd;
 }
 
 #SFDSWFB-list .item.spacer:hover, #SFDSWFB-list .item.spacer.selected {
